Update Locale files.

--- a/src/main/resources/locale/locale_es.properties
+++ b/src/main/resources/locale/locale_es.properties
@@ -392,3 +392,4 @@ Stats.Header.Combat=[[GOLD]]-=HABILIDADES DE COMBATE=-
 Stats.Header.Gathering=[[GOLD]]-=HABILIDADES DE RECOLECCI\u00d3N=-
 Stats.Header.Misc=[[GOLD]]-=HABILIDADES VARIAS=-
 Stats.Own.Stats=[[GREEN]][mcMMO] Estad\u00edsticas
+Spout.LevelUp.1=[[GREEN]]Level Up!
