--- a/src/main/resources/locale/locale_it.properties
+++ b/src/main/resources/locale/locale_it.properties
@@ -342,7 +342,7 @@ Combat.Ignition=[[RED]]**ACCENSIONE**
 Combat.StruckByGore=[[RED]]**SEI STATO SBRANATO**
 Combat.TargetDazed=Il bersaglio \u00e8 rimasto [[DARK_RED]]Stordito
 Combat.TouchedFuzzy=[[DARK_RED]]Toccato sfocato. Feltro vertiginoso.
-mcMMO.Description=[[DARK_AQUA]]Riguardo [[YELLOW]]mcMMO[[DARK_AQUA]] Progetto:,[[GOLD]]mcMMO \u00e8 una mod GdR [[RED]]open source[[GOLD]] creata nel Febbraio 2011,[[GOLD]]da [[BLUE]]nossr50[[GOLD]]. L\'obiettivo \u00e8 di fornire un\'esperienza GdR di qualit\u00e0.,[[DARK_AQUA]]Suggerimenti:,[[GOLD]] - [[GREEN]]Usa [[RED]]/mcc[[GREEN]] per vedere i comandi,[[GOLD]] - [[GREEN]]Digita [[RED]]/NOMEABILIT\u00c0[[GREEN]] per vedere informazioni dettagliate sulle abilit\u00e0,[[DARK_AQUA]]Sviluppatori:,[[GOLD]] - [[GREEN]]nossr50 [[BLUE]](Fondatore),[[GOLD]] - [[GREEN]]GJ [[BLUE]](Capo Progetto),[[GOLD]] - [[GREEN]]NuclearW [[BLUE]](Sviluppatore),[[GOLD]] - [[GREEN]]bm01 [[BLUE]](Sviluppatore),[[GOLD]] - [[GREEN]]TfT_02 [[BLUE]](Sviluppatore),[[GOLD]] - [[GREEN]]Glitchfinder [[BLUE]](Sviluppatore),[[GOLD]] - [[GREEN]]toothplck1 [[BLUE]](Sviluppatore),[[DARK_AQUA]]Links Utili:,[[GOLD]] - [[GREEN]]https://github.com/mcMMO-Dev/mcMMO/issues[[GOLD]] Segnalazione Bug,[[GOLD]] - [[GREEN]]#mcmmo @ irc.esper.net[[GOLD]] IRC Chat,[[GOLD]] - [[GREEN]]http://bit.ly/H6XwFb[[GOLD]] Thread sul Forum di Bukkit
+mcMMO.Description=[[DARK_AQUA]]Riguardo il progetto [[YELLOW]]mcMMO[[DARK_AQUA]]:,[[GOLD]]mcMMO \u00e8 una mod GdR [[RED]]open source[[GOLD]] creata nel Febbraio 2011,[[GOLD]]da [[BLUE]]nossr50[[GOLD]]. L\'obiettivo \u00e8 di fornire un\'esperienza GdR di qualit\u00e0.,[[DARK_AQUA]]Suggerimenti:,[[GOLD]] - [[GREEN]]Usa [[RED]]/mcmmo help[[GREEN]] per vedere i comandi,[[GOLD]] - [[GREEN]]Digita [[RED]]/NOMEABILIT\u00c0[[GREEN]] per vedere informazioni dettagliate sull\'abilit\u00e0,[[DARK_AQUA]]Sviluppatori:,[[GOLD]] - [[GREEN]]nossr50 [[BLUE]](Fondatore),[[GOLD]] - [[GREEN]]GJ [[BLUE]](Capo Progetto),[[GOLD]] - [[GREEN]]NuclearW [[BLUE]](Sviluppatore),[[GOLD]] - [[GREEN]]bm01 [[BLUE]](Sviluppatore),[[GOLD]] - [[GREEN]]TfT_02 [[BLUE]](Sviluppatore),[[GOLD]] - [[GREEN]]Glitchfinder [[BLUE]](Sviluppatore),[[GOLD]] - [[GREEN]]toothplck1 [[BLUE]](Sviluppatore),[[DARK_AQUA]]Link Utili:,[[GOLD]] - [[GREEN]]https://github.com/mcMMO-Dev/mcMMO/issues[[GOLD]] Segnalazioni Bug,[[GOLD]] - [[GREEN]]#mcmmo @ irc.esper.net[[GOLD]] IRC Chat,
 Commands.addlevels.AwardAll.1=[[GREEN]]Ti sono stati aggiudicati {0} livelli in tutte le abilit\u00e0!
 Commands.addlevels.AwardAll.2=[[RED]]Tutte le abilit\u00e0 sono state modificate per {0}.
 Commands.addlevels.AwardSkill.1=[[GREEN]]Ti sono stati aggiudicati {0} livelli in {1}!
@@ -369,21 +369,23 @@ Commands.mcc.Header=[[RED]]---[][[YELLOW]]Comandi di mcMMO[[RED]][]---
 Commands.mcgod=[[RED]]- Attiva o Disattiva la Modalit\u00e0 Dio
 Commands.mchud.Invalid=[[RED]]Quello non \u00e8 un tipo di HUD valido.
 Commands.mcpurge.Success=[[GREEN]]Il database \u00e8 stato ripulito con successo!
-Commands.mcrank.Heading=[[GOLD]]-=CLASSIFICA PERSONALE=-
+Commands.mcrank.Heading=[[GOLD]]-=GRADUATORIA PERSONALE=-
 Commands.mcrank.Overall=[[YELLOW]]Complessivo[[GREEN]] - [[GOLD]]Grado [[WHITE]]#[[GREEN]]{0}
 Commands.mcrank.Player=[[RED]]BERSAGLIO: [[WHITE]]{0}
 Commands.mcrank.Skill=[[YELLOW]]{0}[[GREEN]] - [[GOLD]]Grado [[WHITE]]#[[GREEN]]{1}
 Commands.mcrank.Unranked=[[WHITE]]Non Classificato
 Commands.mcrefresh.Success=[[RED]]I raffreddamenti di {0} sono stati rigenerati.
 Commands.mcremove.Success=[[GREEN]]{0} \u00e8 stato rimosso con successo dal database!
-Commands.mctop.Tip=[[GOLD]]Suggerimento: Usa [[RED]]/mcrank[[GOLD]] per visualizzare tutte le tue classifiche personali!
+Commands.mctop.Tip=[[GOLD]]Suggerimento: Usa [[RED]]/mcrank[[GOLD]] per visualizzare tutte le tue graduatorie personali!
 Commands.mmoedit=[giocatore] <abilit\u00e0> <nuovovalore> [[RED]] - Modifica il bersaglio
+Commands.mmoedit.AllSkills.1=[[GREEN]]Il tuo livello in tutte le abilit\u00e0 \u00e8 stato portato a {0}!
 Commands.mmoedit.Modified.1=[[GREEN]]Il tuo livello di {0} \u00e8 stato portato a {1}!
 Commands.mmoedit.Modified.2=[[RED]]{0} \u00e8 stata modificata per {1}.
 Commands.mmoupdate.Start=[[GRAY]]Inizio conversione...
 Commands.mmoupdate.Finish=[[GREEN]]Conversione terminata!
 Commands.ModDescription=[[RED]]- Leggi una breve descrizione della mod
 Commands.NoConsole=Questo comando non supporta l\'uso da console.
+Commands.Offline=[[RED]]Questo comando non funziona per i giocatori offline.
 Commands.Other=[[GREEN]]--ALTRI COMANDI--
 Commands.Party.Header=[[RED]]-----[][[GREEN]]COMPAGNIA[[RED]][]-----
 Commands.Party.Status=[[DARK_GRAY]]NOME: [[WHITE]]{0} {1}
@@ -434,13 +436,14 @@ Commands.SkillInfo=/<abilit\u00e0> [[RED]]- Visualizza informazioni dettagliate 
 Commands.Stats.Self=LE TUE STATISTICHE
 Commands.Stats=[[RED]]- Visualizza le tue statistiche mcMMO
 Commands.ToggleAbility=[[RED]]- Attiva o Disattiva l\'attivazione delle capacit\u00e0 tramite un clic destro
+Commands.Usage.0=[[RED]]L\'uso appropriato \u00e8 /{0}
 Commands.Usage.1=[[RED]]L\'uso appropriato \u00e8 /{0} {1}
 Commands.Usage.2=[[RED]]L\'uso appropriato \u00e8 /{0} {1} {2}
 Commands.Usage.3=[[RED]]L\'uso appropriato \u00e8 /{0} {1} {2} {3}
 Commands.Usage.Level=livello
 Commands.Usage.Message=messaggio
 Commands.Usage.Page=pagina
-Commands.Usage.PartyName=nome della compagnia
+Commands.Usage.PartyName=nome
 Commands.Usage.Password=parola d\'ordine
 Commands.Usage.Player=giocatore
 Commands.Usage.Skill=abilit\u00e0
@@ -449,18 +452,20 @@ mcMMO.NoInvites=[[RED]]Non hai inviti in questo momento
 mcMMO.NoPermission=[[DARK_RED]]Permessi insufficienti.
 mcMMO.NoSkillNote=[[DARK_GRAY]]Se non hai accesso a un\'abilit\u00e0 non sar\u00e0 mostrata qui.
 Party.Forbidden=[mcMMO] Le compagnie non sono permesse in questo mondo (vedi i Permessi)
-Party.Help.0=[[RED]]L\'uso corretto \u00e8 [[DARK_AQUA]]/party join <giocatore> [parola d\'ordine].
-Party.Help.1=[[RED]]Per creare una compagnia, usa [[DARK_AQUA]]/party create <nome> [parola d\'ordine]
-Party.Help.2=[[RED]]Consulta [[DARK_AQUA]]/party ? [[RED]]per maggiori informazioni
-Party.Help.4=[[RED]]Per chiudere o aprire la tua compagnia, usa [[DARK_AQUA]]/party <lock>
-Party.Help.5=[[RED]]Per proteggere la tua compagnia con una parola d\'ordine, usa [[DARK_AQUA]]/party password <parola d\'ordine>
-Party.Help.6=[[RED]]Per espellere un giocatore dalla tua compagnia, usa [[DARK_AQUA]]/party kick <giocatore>
-Party.Help.7=[[RED]]Per trasferire la propriet\u00e0 della tua compagnia, usa [[DARK_AQUA]]/party owner <giocatore>
-Party.Help.8=[[RED]]Per sciogliere la tua compagnia, usa [[DARK_AQUA]]/party disband
+Party.Help.0=[[RED]]L\'uso appropriato \u00e8 [[DARK_AQUA]]{0} <giocatore> [parola d\'ordine].
+Party.Help.1=[[RED]]per creare una compagnia, usa [[DARK_AQUA]]{0} <nome> [parola d\'ordine].
+Party.Help.2=[[RED]]Consulta [[DARK_AQUA]]{0} [[RED]]per maggiori informazioni
+Party.Help.3=[[RED]]Usa [[DARK_AQUA]]{0} <giocatore> [parola d\'ordine] [[RED]]per entrare o [[DARK_AQUA]]{1} [[RED]]per uscire
+Party.Help.4=[[RED]]Per chiudere o aprire la tua compagnia, usa [[DARK_AQUA]]{0}
+Party.Help.5=[[RED]]Per proteggere la tua compagnia con una parola d\'ordine, usa [[DARK_AQUA]]{0} <parola d\'ordine>
+Party.Help.6=[[RED]]Per espellere un giocatore dalla tua compagnia, usa [[DARK_AQUA]]{0} <giocatore>
+Party.Help.7=[[RED]]Per trasferire la propriet\u00e0 della tua compagnia, usa [[DARK_AQUA]]{0} <giocatore>
+Party.Help.8=[[RED]]Per sciogliere la tua compagnia, usa [[DARK_AQUA]]{0}
 Party.InformedOnJoin={0} [[GREEN]]si \u00e8 unito alla tua compagnia
 Party.InformedOnQuit={0} [[GREEN]]ha abbandonato la tua compagnia
 Party.InformedOnNameChange=[[GOLD]]{0} [[GREEN]]ha impostato il nome della compagnia come [[WHITE]]{1}
 Party.InvalidName=[[DARK_RED]]Questo non \u00e8 un nome di compagnia valido.
+Party.Invite.Self=[[RED]]Non puoi invitare te stesso!
 Party.IsLocked=[[RED]]Questa compagnia \u00e8 gi\u00e0 chiusa!
 Party.IsntLocked=[[RED]]Questa compagnia non \u00e8 chiusa!
 Party.Locked=[[RED]]La compagnia \u00e8 chiusa, solo il capo della compagnia pu\u00f2 fare inviti.
@@ -469,6 +474,7 @@ Party.NotOwner=[[DARK_RED]]Non sei il capo della compagnia.
 Party.Owner.New=[[GREEN]]{0} \u00e8 il nuovo capo della compagnia.
 Party.Owner.NotLeader=[[DARK_RED]]Non sei pi\u00f9 il capo della compagnia.
 Party.Owner.Player=[[GREEN]]Ora sei il capo della compagnia.
+Party.Password.None=[[RED]]Questa compagnia \u00e8 protetta da parola d\'ordine. Sei pregato di fornire una parola d\'ordine per entrarvi.
 Party.Password.Incorrect=[[RED]]Parola d\'ordine della compagnia errata.
 Party.Password.Set=[[GREEN]]Parola d\'ordine della compagnia impostata come {0}
 Party.Password.Removed=[[GREEN]]La parola d\'ordine della compagnia \u00e8 stata rimossa.
@@ -476,21 +482,25 @@ Party.Player.Invalid=[[RED]]Quello non \u00e8 un giocatore valido.
 Party.NotOnline=[[DARK_RED]]{0} non \u00e8 online!
 Party.Player.InSameParty=[[RED]]{0} \u00e8 gi\u00e0 nella tua compagnia!
 Party.PlayerNotInParty=[[DARK_RED]]{0} non \u00e8 in una compagnia
+Party.Specify=[[RED]]Devi specificare una compagnia.
 Party.Teleport.Dead=[[RED]]Non puoi teletrasportarti verso un giocatore morto.
 Party.Teleport.Hurt=[[RED]]Sei stato ferito negli ultimi {0} secondi e non puoi teletrasportarti.
 Party.Teleport.Player=[[GREEN]]Ti sei teletrasportato da {0}.
 Party.Teleport.Self=[[RED]]Non puoi teletrasportarti verso te stesso!
 Party.Teleport.Target=[[GREEN]]{0} ti ha teletrasportato.
 Party.Teleport.Disabled=[[RED]]{0} non consente il teletrasporto di compagnia.
+Party.Rename.Same=[[RED]]Questo \u00e8 gi\u00e0 il nome della tua compagnia!
 Party.Unlocked=[[GRAY]]Party sbloccato.
 Party.Disband=[[GRAY]]La compagnia \u00e8 stata sciolta
 Party.Status.Locked=[[DARK_RED]](SOLO SU INVITO)
 Party.Status.Unlocked=[[DARK_GREEN]](APERTA)
 Party.ShareType.Exp=ESPERIENZA
 Party.ShareType.Item=OGGETTI
-Party.ShareMode.NoShare=NESSUNA
+Party.ShareMode.None=NESSUNA
 Party.ShareMode.Equal=EQUA
 Party.ShareMode.Random=CASUALE
+Party.ExpShare.Disabled=[[RED]]La condivisione di esperienza di compagnia \u00e8 disabilitata.
+Party.ItemShare.Disabled=[[RED]]La condivisione di oggetti di compagnia \u00e8 disabilitata.
 Commands.XPGain.Acrobatics=Cadere
 Commands.XPGain.Archery=Attaccare Mostri
 Commands.XPGain.Axes=Attaccare Mostri
@@ -564,6 +574,12 @@ Vampirism.Killer.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] non era abbastanz
 Vampirism.Killer.Success=[[GOLD]][mcMMO] [[DARK_AQUA]]Hai rubato [[BLUE]]{0}[[DARK_AQUA]] livelli a [[YELLOW]]{1}.
 Vampirism.Victim.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] non \u00e8 stato in grado di rubarti conoscenza!
 Vampirism.Victim.Success=[[GOLD]][mcMMO] [[YELLOW]]{0}[[DARK_RED]] ti ha rubato [[BLUE]]{1}[[DARK_RED]] livelli!
+Hardcore.Disabled=[[GOLD]][mcMMO] Modalit\u00e0 hardcore disabilitata.
+Hardcore.Enabled=[[GOLD]][mcMMO] Modalit\u00e0 hardcore abilitata.
+Hardcore.PercentageChanged=[[GOLD]][mcMMO] La percentuale di perdita delle statistiche \u00e8 stata portata a {0}.
+Vampirism.Disabled=[[GOLD]][mcMMO] Modalit\u00e0 Vampirismo disabilitata.
+Vampirism.Enabled=[[GOLD]][mcMMO] Modalit\u00e0 Vampirismo abilitata.
+Vampirism.PercentageChanged=[[GOLD]][mcMMO] La percentuale di salasso delle statistiche \u00e8 stata portata a {0}.
 Spout.Donate=[[YELLOW]][mcMMO] Fai una donazione!
 Spout.LevelUp.1=[[GREEN]Sei salito di livello!
 Spout.LevelUp.2=[[YELLOW]]{0}[[DARK_AQUA]] ([[GREEN]]{1}[[DARK_AQUA]])
@@ -574,10 +590,35 @@ Spout.Menu.HudButton.2=Cambia il tuo stile di HUD!
 Spout.Menu.Title=[[GOLD]]~Menu mcMMO~
 Spout.Title={0}\n[[YELLOW]]P[[GOLD]]lvl[[WHITE]].[[GREEN]]{1}
 MOTD.Donate=[[DARK_AQUA]]Info Donazioni:
-MOTD.Hardcore.VampireOff=[[GOLD]][mcMMO] [[DARK_RED]]Hardcore & Vampirismo abilitati.
+MOTD.Hardcore.VampireOff=[[GOLD]][mcMMO] [[DARK_RED]]Hardcore & vampirismo abilitati.
 MOTD.Hardcore.Stats=[[GOLD]][mcMMO] [[DARK_AQUA]]Penalit\u00e0 alle Abilit\u00e0 causa Morte: [[DARK_RED]]{0}%
 MOTD.Hardcore.VampireOn=[[GOLD]][mcMMO] [[DARK_RED]]Hardcore abilitato.
 MOTD.PerksPrefix=[[RED]][Vantaggi mcMMO]
 MOTD.Vampire.Stats=[[GOLD]][mcMMO] [[DARK_AQUA]]Salasso di Statistiche da Vampirismo: [[DARK_RED]]{0}%
 MOTD.Version=[[GOLD]][mcMMO] versione [[DARK_AQUA]]{0}
 MOTD.Website=[[GOLD]][mcMMO] [[GREEN]]{0}[[YELLOW]] - Sito di mcMMO
+Commands.Description.addlevels=Aggiungi XP di mcMMO a un utente
+Commands.Description.adminchat=Attiva o disattiva la chat amministratori di mcMMO o invia messaggi in chat amministratori
+Commands.Description.addxp=Aggiunge XP mcMMO a un utente
+Commands.Description.hardcore=Modifica la percentuale hardcore mcMMO o attiva/disattiva la modalit\u00e0 hardcore
+Commands.Description.inspect=Visualizza dettagliate informazioni mcMMO su un altro giocatore
+Commands.Description.mcability=Attiva o disattiva il fatto che le capacit\u00e0 mcMMO vengano preparate con un clic destro.
+Commands.Description.mcgod=Attiva o Disattiva la modalit\u00e0 dio mcMMO
+Commands.Description.mchud=Cambia il tuo stile di HUD di mcMMO
+Commands.Description.mcmmo=Mostra una breve descrizione di mcMMO
+Commands.Description.mcpurge=Elimina dal database mcMMO gli utenti senza livelli mcMMO e quelli che non si sono connessi negli ultimi {0} mesi.
+Commands.Description.mcrank=Mostra la graduatoria mcMMO di un giocatore
+Commands.Description.mcrefresh=Rigenera tutti i raffreddamenti di mcMMO
+Commands.Description.mcremove=Rimuovi un utente dal database mcMMO
+Commands.Description.mcstats=Mostra i tuoi livelli e XP mcMMO 
+Commands.Description.mctop=Mostra le classifiche mcMMO
+Commands.Description.mmoedit=Modifica i livelli mcMMO di un utente
+Commands.Description.mmoupdate=Converte il database mcMMO da Flatfile a MySQL
+Commands.Description.party=Controlla varie impostazioni di compagnia mcMMO
+Commands.Description.partychat=Attiva o disattiva la chat di compagnia mcMMO o invia un messaggio in chat compagnia
+Commands.Description.ptp=Teletrasportati verso un membro della compagnia mcMMO
+Commands.Description.Skill=Visualizza informazioni dettagliate sull\'abilit\u00e0 mcMMO {0}
+Commands.Description.skillreset=Azzera i livelli mcMMO di un utente 
+Commands.Description.vampirism=Modifica la percentuale di vampirismo mcMMO o attiva/disattiva la modalit\u00e0 vampirismo
+Commands.Description.xplock=Blocca la tua barra XP di mcMMO su una specifica abilit\u00e0 di mcMMO
+Commands.Description.xprate=Modifica il tasso XP di mcMMO o d\u00e0 inizio a un evento XP mcMMO.
