--- a/src/main/resources/locale/locale_pt_BR.properties
+++ b/src/main/resources/locale/locale_pt_BR.properties
@@ -4,6 +4,7 @@ Fishing.MagicFound=[[GRAY]]You feel a touch of magic with this catch...
 Mining.Ability.Ready=[[VERDE]]**VOC\u00ca PREPARA A SUA PICARETA**
 Mining.Skillup=[[AMARELO]]Capacidade de Minar aumentada em {0}. Total ({1})
 Repair.Arcane.Fail=[[VERMELHO]]Poder misterioso saiu permanentemente do item.
+Swords.Combat.Bleeding.Stopped=[[CINZA]]O sangramento tem [[VERDE]]Parado[[CINZA]]!
 Ability.Generic.Template=[[VERMELHO]]{0}:[[AMARELO]]{1}
 Combat.ArrowDeflect=[[WHITE]]*DESVIOU A FLECHA*
 Combat.BeastLore=[[GREEN]]*CONHECIMENTO DE FERAS*
