--- a/src/main/resources/locale/locale_zh_CN.properties
+++ b/src/main/resources/locale/locale_zh_CN.properties
@@ -7,7 +7,7 @@ Acrobatics.Effect.2=\u4f18\u96c5\u7684\u7ffb\u6eda
 Acrobatics.Effect.3=\u4e24\u500d\u7684\u7ffb\u6eda\u6548\u679c
 Acrobatics.Effect.4=\u95ea\u907f
 Acrobatics.Effect.5=\u51cf\u5c11\u4e00\u534a\u7684\u4f24\u5bb3
-Acrobatics.Listener=\u6742\u6280:(ACROBATICS)
+Acrobatics.Listener=\u6742\u6280(Acrobatics):
 Acrobatics.Roll.Chance=[[RED]]\u7ffb\u6eda\u51e0\u7387: [[YELLOW]]{0}
 Acrobatics.Roll.GraceChance=[[RED]]\u4f18\u96c5\u7684\u7ffb\u6eda\u51e0\u7387: [[YELLOW]]{0}
 Acrobatics.Roll.Text=**\u7ffb\u6eda**
@@ -49,7 +49,7 @@ Axes.Effect.6=\u51b2\u51fb
 Axes.Effect.7=\u7528\u8db3\u591f\u7684\u529b\u91cf\u51fb\u788e\u62a4\u7532
 Axes.Effect.8=\u5f3a\u70c8\u51b2\u51fb
 Axes.Effect.9=\u5bf9\u65e0\u62a4\u7532\u654c\u4eba\u9020\u6210\u989d\u5916\u4f24\u5bb3
-Axes.Listener=\u65a7\u5934:
+Axes.Listener=\u65a7\u5934(Axes):
 Axes.SkillName=\u65a7\u5934
 Axes.Skills.SS.Off=[[RED]]**\u65a9\u9996\u8005\u6280\u80fd\u5df2\u7ed3\u675f**
 Axes.Skills.SS.On=[[GREEN]]**\u65a9\u9996\u8005\u6280\u80fd\u542f\u52a8**
@@ -84,7 +84,7 @@ Fishing.Effect.4=\u6643\u52a8\u602a\u7269 (\u5bf9\u602a\u7269\u4f7f\u7528)
 Fishing.Effect.5=\u7528\u9c7c\u7aff\u628a\u602a\u7269\u8eab\u4e0a\u7684\u4e1c\u897f\u6447\u4e0b\u6765
 Fishing.Enchant.Chance=[[RED]]\u9b54\u6cd5\u730e\u4eba\u51e0\u7387: [[YELLOW]]{0}
 Fishing.ItemFound=[[GRAY]]\u53d1\u73b0\u5b9d\u7269\u4e86\uff01
-Fishing.Listener=\u9493\u9c7c:
+Fishing.Listener=\u9493\u9c7c(Fishing):
 Fishing.MagicFound=[[GRAY]]\u4f60\u611f\u5230\u4e00\u80a1\u9b54\u529b\u7684\u6ce2\u52a8...
 Fishing.SkillName=\u9493\u9c7c
 Fishing.Skillup=[[YELLOW]]\u9493\u9c7c\u6280\u80fd\u63d0\u5347\u4e86 {0}. \u603b\u5171 ({1})
@@ -92,6 +92,7 @@ Herbalism.Ability.DoubleDropChance=[[RED]]\u53cc\u500d\u6389\u843d\u51e0\u7387: 
 Herbalism.Ability.GTe.Length=[[RED]]\u571f\u795e\u5e87\u4f51\u6301\u7eed\u65f6\u95f4: [[YELLOW]]{0}s
 Herbalism.Ability.GTh.Chance=[[RED]]\u7eff\u5316\u51e0\u7387: [[YELLOW]]{0}
 Herbalism.Ability.GTh.Fail=[[RED]]**\u7eff\u5316\u5931\u8d25**
+Herbalism.Ability.GTh.Stage=[[RED]]\u7eff\u5316:[[YELLOW]]\u519c\u4f5c\u7269\u751f\u957f\u671f{0}
 Herbalism.Ability.GTh=[[GREEN]]**\u7eff\u5316**
 Herbalism.Ability.Lower=[[GRAY]]**\u4f60\u653e\u4e0b\u4e86\u4f60\u7684\u9504\u5934**
 Herbalism.Ability.Ready=[[GREEN]]**\u4f60\u6311\u8d77\u4e86\u4f60\u7684\u9504\u5934**
@@ -169,28 +170,28 @@ Repair.Effect.6=\u94bb\u77f3\u4fee\u7406 ({0}+ SKILL)
 Repair.Effect.7=\u4fee\u7406\u94bb\u77f3\u5de5\u5177\u548c\u88c5\u5907
 Repair.Effect.8=\u79d8\u6cd5\u953b\u9020
 Repair.Effect.9=\u4fee\u7406\u9644\u9b54\u7269\u54c1
-Repair.Effect.16=\u6253\u635e ({0}+ SKILL)
-Repair.Effect.17=\u6253\u635e\u5de5\u5177\u548c\u62a4\u7532
+Repair.Effect.16=\u5206\u89e3 ({0}+ SKILL)
+Repair.Effect.17=\u5206\u89e3\u5de5\u5177\u548c\u62a4\u7532
 Repair.Error=[[DARK_RED]]mcMMO \u5728\u5c1d\u8bd5\u4fee\u7406\u6b64\u7269\u54c1\u65f6\u53d1\u751f\u4e86\u9519\u8bef!
-Repair.Listener.Anvil=[[DARK_RED]]\u4f60\u5df2\u7ecf\u653e\u7f6e\u4e86\u4e00\u5757\u8d34\u65b9\u5757, \u4f60\u53ef\u4ee5\u5728\u8d34\u65b9\u5757\u4e0a\u4fee\u7406\u5de5\u5177\u548c\u62a4\u7532.
+Repair.Listener.Anvil=[[DARK_RED]]\u4f60\u653e\u7f6e\u7684\u94c1\u65b9\u5757\u53ef\u4ee5\u7528\u6765\u4fee\u7406\u5de5\u5177\u548c\u9632\u5177.
 Repair.Listener.Anvil2=[[DARK_RED]]\u60a8\u653e\u7f6e\u4e86\u4e00\u4e2a\u6253\u635e\u7827\uff0c\u7528\u6b64\u6765\u6253\u635e\u5de5\u5177\u548c\u88c5\u7532\u3002
 Repair.Listener=\u4fee\u7406\uff1a
 Repair.SkillName=\u4fee\u7406
-Repair.Skills.AdeptSalvage=[[DARK_RED]]\u4f60\u662f\u4e0d\u662f\u4e0d\u591f\u719f\u7ec3\u6551\u52a9\u9879\u76ee.
-Repair.Skills.AdeptDiamond=Repair.Skills.AdeptGold=[[DARK_RED]]\u4f60\u7684\u6280\u80fd\u7b49\u7ea7\u4e0d\u8db3\u4ee5\u4fee\u7406\u94bb\u77f3\u88c5\u5907.
-Repair.Skills.AdeptGold=Repair.Skills.AdeptGold=[[DARK_RED]]\u4f60\u7684\u6280\u80fd\u7b49\u7ea7\u4e0d\u8db3\u4ee5\u4fee\u7406\u9ec4\u91d1\u88c5\u5907.
+Repair.Skills.AdeptSalvage=[[DARK_RED]]\u4f60\u4e0d\u80fd\u5206\u89e3\u8fd9\u4e2a\u7269\u54c1.
+Repair.Skills.AdeptDiamond=[[DARK_RED]]\u4f60\u7684\u6280\u80fd\u7b49\u7ea7\u4e0d\u8db3\u4ee5\u4fee\u7406\u94bb\u77f3\u88c5\u5907.
+Repair.Skills.AdeptGold=[[DARK_RED]]\u4f60\u7684\u6280\u80fd\u7b49\u7ea7\u4e0d\u8db3\u4ee5\u4fee\u7406\u9ec4\u91d1\u88c5\u5907.
 Repair.Skills.AdeptIron=[[DARK_RED]]\u4f60\u7684\u6280\u80fd\u4e0d\u8db3\u4ee5\u4fee\u590d\u94c1\u8d28\u88c5\u5907.
 Repair.Skills.AdeptStone=[[DARK_RED]]\u4f60\u7684\u6280\u80fd\u7b49\u7ea7\u4e0d\u8db3\u4ee5\u4fee\u590d\u77f3\u5934\u88c5\u5907\u77f3\u5934\u88c5\u5907.
 Repair.Skills.Adept=[[RED]]\u4f60\u5fc5\u987b\u8fbe\u5230\u7b49\u7ea7 [[YELLOW]]{0}[[RED]] \u624d\u80fd\u4fee\u7406 [[YELLOW]]{1}
 Repair.Skills.FeltEasy=[[GRAY]]\u90a3\u770b\u8d77\u6765\u5f88\u7b80\u5355.
 Repair.Skills.FullDurability=[[GRAY]]\u4f60\u7684\u88c5\u5907\u5df2\u7ecf\u6ee1\u8010\u4e45\u5ea6\u4e86
-Repair.Skills.SalvageSuccess=[[GRAY]]\u7269\u54c1\u5df2\u56de\u6536!
+Repair.Skills.SalvageSuccess=[[GRAY]]\u7269\u54c1\u5df2\u5206\u89e3!
 Repair.Skills.NotFullDurability=[[DARK_RED]]\u60a8\u4e0d\u80fd\u633d\u6551\u53d7\u635f\u7684\u9879\u76ee\u3002
 Repair.Skills.Mastery=[[RED]]\u4fee\u7406\u7cbe\u901a: [[YELLOW]]\u989d\u5916\u56de\u590d {0}% \u8010\u4e45\u5ea6
 Repair.Skills.StackedItems=[[DARK_RED]]\u4f60\u65e0\u6cd5\u4fee\u7406\u5df2\u53e0\u52a0\u7684\u7269\u54c1.
 Repair.Skills.Super.Chance=[[RED]]\u8d85\u7ea7\u4fee\u7406\u51e0\u7387: [[YELLOW]]{0}
 Repair.Skillup=[[YELLOW]]\u4fee\u7406\u6280\u80fd\u4e0a\u5347\u4e86 {0}. \u603b\u5171 ({1})
-Repair.Arcane.Chance.Downgrade=[[GRAY]]AF\u964d\u7ea7\u53ef\u80fd: [[YELLOW]]{0}%
+Repair.Arcane.Chance.Downgrade=[[GRAY]]\u9644\u9b54\u964d\u7ea7\u51e0\u7387: [[YELLOW]]{0}%
 Repair.Arcane.Chance.Success=[[GRAY]]\u81ea\u52a8\u5bf9\u7126\u7684\u6210\u529f\u7387: [[YELLOW]]{0}%
 Repair.Arcane.Downgrade=[[RED]]\u8fd9\u4ef6\u7269\u54c1\u7684\u9644\u9b54\u7b49\u7ea7\u5df2\u4e0b\u964d.
 Repair.Arcane.Fail=[[RED]]\u8fd9\u4ef6\u7269\u54c1\u7684\u9644\u9b54\u5df2\u6d88\u5931.
@@ -214,16 +215,16 @@ Swords.Effect.2=\u952f\u9f7f\u653b\u51fb (\u4e3b\u52a8\u6280\u80fd)
 Swords.Effect.4=\u952f\u9f7f\u653b\u51fb\u6d41\u8840\u4f24\u5bb3\u589e\u52a0
 Swords.Effect.6=\u6d41\u8840
 Swords.Effect.7=\u4ea7\u751f\u6d41\u8840\u70b9
-Swords.Listener=\u5251:
-Swords.SkillName=\u5251
+Swords.Listener=\u5251\u672f(Swords):
+Swords.SkillName=\u5251\u672f
 Swords.Skills.SS.Off=[[RED]]**\u952f\u9f7f\u653b\u51fb\u5df2\u7ecf\u7ed3\u675f\u4e86**
 Swords.Skills.SS.On=[[GREEN]]**\u952f\u9f7f\u653b\u51fb\u542f\u52a8**
 Swords.Skills.SS.Refresh=[[GREEN]]\u4f60\u7684 [[YELLOW]]\u952f\u9f7f\u653b\u51fb [[GREEN]]\u6280\u80fd\u5df2\u7ecf\u53ef\u4ee5\u4f7f\u7528\u4e86!
 Swords.Skills.SS.Other.Off=[[RED]]\u952f\u9f7f\u653b\u51fb[[GREEN]] \u5df2\u7ecf\u7ed3\u675f\u4e86 [[YELLOW]]{0}
 Swords.Skills.SS.Other.On=[[GREEN]]{0}[[DARK_GREEN]] \u4f7f\u7528\u4e86 [[RED]]\u952f\u9f7f\u653b\u51fb!
-Swords.Skillup=[[YELLOW]]\u5355\u624b\u5251\u6280\u80fd\u63d0\u9ad8 {0}. \u603b ({1})
+Swords.Skillup=[[YELLOW]]\u5251\u672f\u6280\u80fd\u7b49\u7ea7\u4e0a\u5347 {0}. \u73b0\u5728\u662f ({1})
 Swords.SS.Length=[[RED]]\u952f\u9f7f\u5229\u5203\u6301\u7eed\u65f6\u95f4: [[YELLOW]]{0}s
-Taming.Ability.Bonus.0=\u7075\u7334\u654f\u6377
+Taming.Ability.Bonus.0=\u73af\u5883\u611f\u77e5
 Taming.Ability.Bonus.1=\u72fc\u4f1a\u907f\u514d\u5371\u9669
 Taming.Ability.Bonus.2=\u539a\u5b9e\u7684\u76ae\u6bdb
 Taming.Ability.Bonus.4=\u51b2\u51fb\u62b5\u6297
@@ -238,7 +239,7 @@ Taming.Effect.1=\u7528\u9aa8\u5934\u53f3\u952e\u5355\u51fb\u72fc\u6216\u8005\u8c
 Taming.Effect.10=\u51b2\u51fb\u62b5\u6297
 Taming.Effect.11=\u7206\u70b8\u4f24\u5bb3\u51cf\u5c11
 Taming.Effect.12=\u91ce\u6027\u547c\u5524
-Taming.Effect.13=\u4e3a\u4f60\u81ea\u5df1\u53ec\u5524\u4e00\u5934\u52a8\u7269
+Taming.Effect.13=\u4e3a\u4f60\u53ec\u5524\u4e00\u53ea\u5ba0\u7269
 Taming.Effect.14=[[GRAY]]\u53ec\u5524 (\u8c79\u732b): \u6309\u4f4fshift\u540c\u65f6\u5355\u51fb\u5de6\u952e \u8fd8\u9700\u8981\u62ff {0} \u6761\u9c7c\u5728\u624b\u91cc
 Taming.Effect.15=[[GRAY]]\u53ec\u5524 (\u72fc): \u6309\u4f4fshift\u540c\u65f6\u5355\u51fb\u5de6\u952e \u8fd8\u9700\u8981\u62ff {0} \u6839\u9aa8\u5934\u5728\u624b\u91cc
 Taming.Effect.16=\u5feb\u9910\u670d\u52a1
@@ -252,7 +253,7 @@ Taming.Effect.7=\u4ed9\u4eba\u638c/\u5ca9\u6d46 \u6050\u60e7\u75c7, \u514d\u75ab
 Taming.Effect.8=\u539a\u5b9e\u7684\u76ae\u6bdb
 Taming.Effect.9=\u524a\u51cf\u53d7\u5230\u7684\u4f24\u5bb3, \u706b\u7130\u62b5\u6297
 Taming.Listener.Wolf=[[DARK_GRAY]]\u4f60\u7684\u72fc\u98de\u901f\u5730\u8dd1\u56de\u4e86\u4f60\u8eab\u8fb9\u3002\u3002\u3002
-Taming.Listener=\u9a6f\u517d:
+Taming.Listener=\u9a6f\u517d(Taming):
 Taming.SkillName=\u9a6f\u517d
 Taming.Skillup=[[YELLOW]]\u9a6f\u517d\u6280\u80fd\u4e0a\u5347\u4e86 {0}. \u603b\u5171 ({1})
 Taming.Summon.Complete=[[GREEN]]\u53ec\u5524\u5b8c\u6bd5
@@ -425,7 +426,7 @@ Guides.Mining=[[DARK_AQUA]]\u5173\u4e8e\u91c7\u77ff\uff1a\n[[YELLOW]]\u5728\u91c
 Guides.Repair=[[DARK_AQUA]]\u5173\u4e8e\u4fee\u7406:\n[[YELLOW]]\u4fee\u7406\u529f\u80fd\u53ef\u4ee5\u4e3a\u4f60\u63d0\u4f9b\u4e86\u7528\u4e00\u4e2a\u94c1\u65b9\u5757\u6765\u4fee\u7406\u62a4\u7532\u548c\n[[YELLOW]]\u5de5\u5177\u7684\u5730\u65b9, \u6216\u8005\u7528\u4e00\u4e2a\u91d1\u8272\u65b9\u5757\u6765\u633d\u6551\u62a4\u7532\u548c\u5de5\u5177.\n[[DARK_AQUA]]\u83b7\u53d6\u7ecf\u9a8c:\n[[YELLOW]]\u4f7f\u7528mcMMO\u7684\u94c1\u6be1\u6765\u4fee\u7406\u5de5\u5177\u6216\u62a4\u7532. \u8fd9\u4e2a\u94c1\u7827\u53ef\u4ee5\u662f\n[[YELLOW]]\u9ed8\u8ba4\u7684\u94c1\u5757\u4e14\u4e0d\u80fd\u548c\u539f\u7248\u7684Minecraft\u94c1\u6be1\u6df7\u6dc6.\n[[DARK_AQUA]]\u6211\u600e\u4e48\u624d\u80fd\u4fee\u7406?\n[[YELLOW]]\u653e\u7f6e\u4e00\u4e2a mcMMO \u7684\u94c1\u7827\u5e76\u4e14\u70b9\u51fb\u53f3\u952e\u6765\u4fee\u7406 \n[[YELLOW]]\u4f60\u76ee\u524d\u62ff\u5728\u624b\u4e0a\u7684\u7269\u54c1. \u6bcf\u70b9\u51fb\u4e00\u6b21\u6d88\u8017\u4e00\u4e2a\u7269\u54c1.\n[[DARK_AQUA]]How does Repair Mastery work?\n[[YELLOW]]Repair Mastery increases the repair amount. The extra amount\n[[YELLOW]]repaired is influenced by your Repair skill level.\n[[DARK_AQUA]]How does Super Repair work?\n[[YELLOW]]Super Repair is a passive ability. When repairing an item,\n[[YELLOW]]it grants players a chance to repair an item with\n[[YELLOW]]double effectiveness.\n[[DARK_AQUA]]How does Arcane Forging work?\n[[YELLOW]]This passive ability allows you to repair items with a certain\n[[YELLOW]]chance of maintaining its enchantments. The enchants may be\n[[YELLOW]]kept at their existing levels, downgraded to a lower level,\n[[YELLOW]]or lost entirely.\n[[DARK_AQUA]]How does Salvage work?\n[[YELLOW]]Place down a mcMMO Salvage Anvil and right-click to salvage\n[[YELLOW]]the item you\'re currently holding.\n[[YELLOW]]This will break the item apart en give back the used ingots.\n[[YELLOW]]Note: You can only salvage fully repaired tools or armor.
 Inspect.Offline=[[RED]]\u4f60\u6ca1\u6709\u67e5\u8be2\u4e0d\u5728\u7ebf\u73a9\u5bb6\u4fe1\u606f\u7684\u6743\u9650!
 Inspect.OfflineStats=\u4e0d\u5728\u7ebf\u73a9\u5bb6\u7684mcmmo\u7edf\u8ba1\u4fe1\u606f [[YELLOW]]{0}
-Inspect.Stats=[[GREEN]]mcMMO \u7684\u7edf\u8ba1\u4fe1\u606f [[YELLOW]]{0}
+Inspect.Stats=[[YELLOW]]{0} \u7684 [[GREEN]]mcMMO \u7edf\u8ba1\u4fe1\u606f
 Inspect.TooFar=[[RED]]\u4f60\u65e0\u6cd5\u68c0\u67e5\u90a3\u4e2a\u73a9\u5bb6\u56e0\u4e3a\u4f60\u4eec\u8ddd\u79bb\u592a\u8fdc\u4e86!
 Item.Injured.Wait=\u4f60\u6700\u8fd1\u53d7\u4f24\u4e86\u6240\u4ee5\u4f60\u5fc5\u987b\u7b49\u4e00\u6bb5\u65f6\u95f4\u624d\u80fd\u4f7f\u7528\u8fd9\u4e2a. [[YELLOW]]({0}s)
 Skills.Disarmed=[[DARK_RED]]\u4f60\u88ab\u7f34\u68b0\u4e86!
