--- a/src/main/resources/locale/locale_ko.properties
+++ b/src/main/resources/locale/locale_ko.properties
@@ -1,24 +1,36 @@
 Acrobatics.Combat.Proc=[[green]]**Dodge**
+Acrobatics.Listener=\uace1\uc608:
 Acrobatics.SkillName=\uc7ac\uc8fc \ub118\uae30
 Acrobatics.Skillup=[[\ub178\ub780\uc0c9]] \uace1\uc608 \uae30\uc220\uc740 {0} \uc99d\uac00\ud588\uc2b5\ub2c8\ub2e4. \ucd1d ({1})
+Archery.Listener=\uad81\uc220:
 Archery.Skillup=[[\ub178\ub780\uc0c9]] {0} \uc99d\uac00 \uc591\uad81 \uae30\uc220. \ucd1d ({1})
+Axes.Ability.Bonus.0=\ub3c4\ub07c \ub9c8\uc2a4\ud130\ub9ac
+Axes.Combat.GI.Struck=[[RED]]**\uce58\uba85\uc0c1\uc744 \uc785\uc5c8\ub2e4**
+Axes.Effect.2=\uacb0\uc815\uc801\uc778 \uacf5\uaca9
+Axes.Effect.3=\uc774\uc911 \ub370\ubbf8\uc9c0
 Axes.Skills.SS.On=[[\ub179\uc0c9]] ** \uc2a4\uceec \uc2a4\ud50c\ub9ac\ud130 \ud65c\uc131\ud654 **
 Axes.Skills.SS.Refresh=[[\ub179\uc0c9]] \ub2f9\uc2e0\uc758 [[\ub178\ub780\uc0c9]] \uc2a4\uceec \uc2a4\ud50c\ub9ac\ud130 [[\ub179\uc0c9]] \ub2a5\ub825\uc774 \uc0c8\ub85c \uace0\uccd0\uc9d1\ub2c8\ub2e4!
 Axes.Skills.SS.Other.On=[[\ub179\uc0c9]] {0} [[\uc5b4\ub450\uc6b4 \ub179\uc0c9]] \uc0ac\uc6a9\ud55c [[\ub808\ub4dc]] \uc2a4\uceec \uc2a4\ud50c\ub9ac\ud130!
+Axes.Skillup=[[YELLOW]]\ub3c4\ub07c \uae30\uc220\uc774 {0} \uc99d\uac00\ud588\uc2b5\ub2c8\ub2e4. \ucd1d ({1})
 Excavation.SkillName=\ubc1c\uad74
+Fishing.ItemFound=[[GRAY]]\ubcf4\ubb3c\uc744 \ubc1c\uacac\ud588\uc2b5\ub2c8\ub2e4!
 Herbalism.Listener=\uc57d\ucd08\ud559 :
 Herbalism.Skills.GTe.Refresh=[[\ub179\uc0c9]] \ub2f9\uc2e0\uc758 [[\ub178\ub780\uc0c9]] \uadf8\ub9b0 \ud14c\ub77c [[\ub179\uc0c9]] \ub2a5\ub825\uc774 \uc0c8\ub85c \uace0\uccd0\uc9d1\ub2c8\ub2e4!
 Herbalism.Skills.GTe.Other.Off=[[\ub808\ub4dc]] \uadf8\ub9b0 \ud14c\ub77c [[\ub179\uc0c9]]\uc5d0 \ub300\ud55c \ud6a8\ub825\uc774 [[\ub178\ub780\uc0c9]] {0}
 Mining.Ability.Length=[[\ub808\ub4dc]] \uc288\ud37c \ucc28\ub2e8\uae30 \uae38\uc774 : [[\ub178\ub780\uc0c9]] {0} \ucd08
 Mining.Ability.Ready=[[GREEN]]**\uace1\uad2d\uc774\ub97c \uc900\ube44\ud558\uc138\uc694.**
-Mining.Skills.SuperBreaker.Refresh=[[\ub179\uc0c9]] \ub2f9\uc2e0\uc758 [[\ub178\ub780\uc0c9]] \uc288\ud37c \ucc28\ub2e8\uae30 [[\ub179\uc0c9]] \ub2a5\ub825\uc774 \uc0c8\ub85c \uace0\uccd0\uc9d1\ub2c8\ub2e4!
+Mining.Listener=\uad11\uc5c5:
+Mining.Skills.SuperBreaker.Refresh=[[GREEN]]\ub2f9\uc2e0\uc758 [[YELLOW]]\uc288\ud37c \ube0c\ub808\uc774\ucee4[[GREEN]] \ub2a5\ub825\uc774 \uc6d0\uc0c1\ubcf5\uadc0 \ub418\uc5c8\uc2b5\ub2c8\ub2e4!
 Mining.Skillup=[[\ub178\ub780\uc0c9]] \ub9c8\uc774\ub2dd \uae30\uc220 {0} \uc99d\uac00\ud588\uc2b5\ub2c8\ub2e4. \ucd1d ({1})
-Mining.Blast.Refresh=[[\ub179\uc0c9]] \ub2f9\uc2e0\uc758 [[\ub178\ub780\uc0c9]] \ub3cc\ud48d \ub9c8\uc774\ub2dd [[\ub179\uc0c9]] \ub2a5\ub825\uc774 \uc0c8\ub85c \uace0\uccd0\uc9d1\ub2c8\ub2e4!
+Mining.Blast.Radius.Increase=[[RED]]\ud3ed\ubc1c \ubc94\uc704 \uc99d\uac00\ub7c9: [[YELLOW]]+{0}
+Mining.Blast.Refresh=[[GREEN]]\ub2f9\uc2e0\uc758 [[YELLOW]]\ubc1c\ud30c [[GREEN]]\ub2a5\ub825\uc774 \uc6d0\uc0c1\ubcf5\uadc0 \ub418\uc5c8\uc2b5\ub2c8\ub2e4!
+Repair.Effect.0=\uc218\ub9ac
+Repair.Effect.2=\uc218\ub9ac \ub9c8\uc2a4\ud130\ub9ac
 Repair.Effect.9=\ub9c8\ubc95 \ud56d\ubaa9\uc744 \ubcf5\uad6c
 Repair.Listener=\ubcf5\uad6c :
 Repair.SkillName=REPAIR
 Repair.Skills.AdeptDiamond=[[\uac80 \ubd89\uc740]] \ub2f9\uc2e0\uc740 \ub2e4\uc774\uc544\ubaac\ub4dc\ub97c \ubcf5\uad6c \ud560 \uc218\uc788\uc744\ub9cc\ud07c \uc219\ub828 \ub41c \uc544\ub2c8\uc5d0\uc694.
-Repair.Skills.AdeptGold=[[\uac80 \ubd89\uc740]] \ub2f9\uc2e0\uc740 \uae08\uc744 \ubcf5\uad6c \ud560 \uc218\uc788\uc744\ub9cc\ud07c \uc219\ub828 \ub41c \uc544\ub2c8\uc5d0\uc694.
+Repair.Skills.AdeptGold=[[DARK_RED]]\ub2f9\uc2e0\uc740 \uae08\uc744 \ubcf5\uad6c\ud560 \uc218 \uc788\uc744\ub9cc\ud07c \uc219\ub828\ub418\uc9c0 \uc54a\uc558\uc2b5\ub2c8\ub2e4.
 Repair.Skills.AdeptStone=[[\uac80 \ubd89\uc740]] \ub2f9\uc2e0\uc740 \ub3cc\uc744 \ubcf5\uad6c \ud560 \uc218\uc788\uc744\ub9cc\ud07c \uc219\ub828 \ub41c \uc544\ub2c8\uc5d0\uc694.
 Repair.Skillup=[[\ub178\ub780\uc0c9]] \uc218\ub9ac \uae30\uc220 {0} \uc99d\uac00\ud588\uc2b5\ub2c8\ub2e4. \ucd1d ({1})
 Repair.Arcane.Chance.Success=[[\ud68c\uc0c9]] AF \uc131\uacf5 \uc18d\ub3c4 : [[\ub178\ub780\uc0c9]] {0} %
@@ -26,38 +38,45 @@ Repair.Arcane.Fail=[[\ub808\ub4dc]] \ub9c8\ubc95 \uc804\uc6d0\uc774 \uc601\uad6c
 Swords.Ability.Ready=[[\ub179\uc0c9]] ** \uc900\ube44 \ub410\uc5b4 \uac80\uc744 **
 Swords.Combat.Bleeding.Stopped=[[\ud68c\uc0c9]] \ucd9c\ud608\uc774 \uac00\uc9c4 [[\ub179\uc0c9]] \uc911\uc9c0 [[\ud68c\uc0c9]]!
 Swords.Combat.Bleeding=[[\ub179\uc0c9]] ** \uc801 \ucd9c\ud608 **
-Swords.Combat.Countered=[[\ub179\uc0c9]] ** \uce74\uc6b4\ud130 \uacf5\uaca9 **
+Swords.Combat.Countered=[[GREEN]]**\uce74\uc6b4\ud130-\uacf5\uaca9**
+Swords.Listener=\uac80:
 Swords.Skills.SS.On=[[\ub179\uc0c9]] ** \ud1b1\ub2c8 \ubaa8\uc591\uc758 \ud30c\uc5c5\uc774 \ud65c\uc131\ud654 **
 Swords.Skills.SS.Other.Off=[[\ub808\ub4dc]] \ud1b1\ub2c8 \ubaa8\uc591\uc758 \uacbd\uace0 [[GREEN]]\uc5d0 \ub300\ud55c \ud6a8\ub825\uc774 [[\ub178\ub780\uc0c9]] {0}
 Swords.Skills.SS.Other.On=[[\ub179\uc0c9]] {0} [[\uc5b4\ub450\uc6b4 \ub179\uc0c9]] \uc0ac\uc6a9\ud55c [[\ub808\ub4dc]] \ud1b1\ub2c8 \ubaa8\uc591\uc758 \uacbd\uace0!
 Taming.Ability.Bonus.2=\ub450\uaebc\uc6b4 \ubaa8\ud53c
 Taming.Listener.Wolf=[[\uc5b4\ub450\uc6b4 \ud68c\uc0c9]] \ub2e4\uc2dc\uc5d0 \ub300\ud55c \uadc0\ud558\uc758 \ub291\ub300 scurries ...
 Unarmed.Listener=\ubb34\uae30 :
+Unarmed.SkillName=\ube44\ubb34\uc7a5
 Unarmed.Skills.Berserk.Off=[[RED]]**\ubc84\uc11c\ud06c \ud574\uc81c**
 Unarmed.Skills.Berserk.Other.Off=[[\ub808\ub4dc]] \uad11\ud3ec \ud55c [[\ub179\uc0c9]]\uc5d0 \ub300\ud55c \ud6a8\ub825\uc774 [[\ub178\ub780\uc0c9]] {0}
-Unarmed.Skills.Berserk.Other.On=[[\ub179\uc0c9]] {0} [[\uc5b4\ub450\uc6b4 \ub179\uc0c9]] \uc0ac\uc6a9\ud55c [[\ub808\ub4dc]] \uc6a9\ub9f9 \ud55c \uc804\uc0ac!
-Woodcutting.Ability.0=\uc78e \uc1a1\ud48d\uae30
+Unarmed.Skills.Berserk.Other.On=[[GREEN]]{0}[[DARK_GREEN]] \ub294(\uc740) [[RED]]\ubc84\uc11c\ud06c[[DARK_GREEN]]\ub97c \uc0ac\uc6a9\ud588\ub2e4!
+Woodcutting.Ability.0=\ub098\ubb47\uc78e \uc1a1\ud48d
 Woodcutting.Ability.1=\uc78e\uc744 \ub0a0\ub824
 Woodcutting.SkillName=\ubc8c\ubaa9
 Woodcutting.Skills.TreeFeller.Other.Off=[[\ub808\ub4dc]] \ud2b8\ub9ac \ud3a0\ub7ec [[\ub179\uc0c9]]\uc5d0 \ub300\ud55c \ud6a8\ub825\uc774 [[\ub178\ub780\uc0c9]] {0}
 Woodcutting.Skills.TreeFeller.Splinter=[[\ub808\ub4dc]] \ub2f9\uc2e0\uc758 \ub3c4\ub07c \uc870\uac01 \uc870\uac01 \uc218\uc2ed\uc73c\ub85c!
 Ability.Generic.Template.Lock=[[\ud68c\uc0c9]] {0}
 Ability.Generic.Template=[[\ubd89\uc740]]{0}: [[\ud669\uc0c9]]{1}
-Combat.BeastLore=[[\ub179\uc0c9]] ** \uc9d0\uc2b9 \uc9c0\uc2dd **
+Combat.BeastLore=[[GREEN]]**\uc9d0\uc2b9 \uc9c0\uc2dd**
 Combat.BeastLoreHealth=[[\uc5b4\ub450\uc6b4 \uc544\ucfe0\uc544]] \uac74\uac15 ([[\ub179\uc0c9]] {0} [[\uc5b4\ub450\uc6b4 \uc544\ucfe0\uc544]] / {1})
 Combat.TouchedFuzzy=[[\uc5b4\ub450\uc6b4_\ubd89\uc740 \uc0c9]] \ud37c\uc9c0 \uc5b8\uae09\ud588\ub2e4. \ub514\uc9c0\uc744 \ub290\uaf08\ub2e4.
-Commands.AdminChat.Off=[[\ub808\ub4dc]] \uad00\ub9ac\uc790 \ub9cc \uc624\ud504 \ucc44\ud305
+Commands.Ability.Off=\ub2a5\ub825 \uc0ac\uc6a9 [[RED]]\ub054
+Commands.AdminChat.Off=\uad00\ub9ac\uc790\ub9cc \ub300\ud654 \uae30\ub2a5 [[RED]]\ub054
 Commands.AdminToggle=[[\ub808\ub4dc]] - \uc804\ud658 \uad00\ub9ac\uc790 \ucc44\ud305
 Commands.Disabled=[[\ub808\ub4dc]]\uc774 \uba85\ub839\uc744 \uc0ac\uc6a9\ud560 \uc218 \uc5c6\uc2b5\ub2c8\ub2e4.
+Commands.DoesNotExist=[[RED]]\uc0ac\uc6a9\uc790\uac00 DB\uc5d0 \uc874\uc7ac\ud558\uc9c0 \uc54a\uc2b5\ub2c8\ub2e4!
+Commands.GodMode.Disabled=[[YELLOW]]mcMMO Godmode \ube44\ud65c\uc131\ud654
 Commands.Invite.Accepted=[[\ub179\uc0c9]] \uc811\uc218 \ucd08\ub300\ud569\ub2c8\ub2e4. \ub2f9\uc2e0\uc740 \ud30c\ud2f0\uc5d0 \uc744 (\ub97c) \uac00\uc785 {0}
 Commands.mmoedit=[\ud50c\ub808\uc774\uc5b4] <skill> <newvalue> [[RED]] - \ubaa9\ud45c\ub97c \uc218\uc815
 Commands.Party.Invite.0=[[\uc801\uc0c9]] \uacbd\uace0 : [[\ub179\uc0c9]] \ub2f9\uc2e0\uc740 \ub098\uc5d0\uac8c \ud30c\ud2f0 \ucd08\ub300\ub97c\ubc1b\uc740 {0}\uc5d0\uc11c {1}
 Commands.Party.Kick=[[\ub808\ub4dc]] \ub2f9\uc2e0\uc740 \uc790 {0}\uc5d0\uc11c \ucad3\uaca8\ub418\uc5c8\uc2b5\ub2c8\ub2e4!
 Commands.Party.Leave=[[\ub808\ub4dc]] \ub2f9\uc2e0\uc774 \ub0a8\uaca8 \ub450\uc5c8\ub358 \uadf8 \ub2f9\uc0ac\uc790
+Commands.Party.None=[[RED]]\ud30c\ud2f0\uc5d0 \ub4e4\uc5b4\uac00 \uc788\uc9c0 \uc54a\uc2b5\ub2c8\ub2e4.
 Commands.PowerLevel.Leaderboard=[[\ub178\ub780\uc0c9]] - mcMMO [[\ube14\ub8e8]] \ud30c\uc6cc \ub808\ubca8 [[\ub178\ub780\uc0c9]] \ub9ac\ub354 -
-Commands.PowerLevel=[[\uac80 \ubd89\uc740]] \uc804\uc6d0 LEVEL : [[\ub179\uc0c9]] {0}
+Commands.PowerLevel=[[DARK_RED]]\ud798 \ub808\ubca8: [[GREEN]]{0}
 Party.Password.Set={0}\uc5d0 [[\ub179\uc0c9]] \uc790 \uc554\ud638\uac00 \uc124\uc815
 Party.Player.Invalid=[[\ub808\ub4dc]] \uadf8\uac74 \uc62c\ubc14\ub978 \ud50c\ub808\uc774\uc5b4\uac00 \uc544\ub2d9\ub2c8\ub2e4.
+Party.Teleport.Dead=[[RED]]\uc0ac\ub9dd\ud55c \ud50c\ub808\uc774\uc5b4\uc5d0\uac8c \ud154\ub808\ud3ec\ud2b8 \ud560 \uc218 \uc5c6\uc2b5\ub2c8\ub2e4.
 Party.Teleport.Target=[[\ub179\uc0c9]] {0} \ub2f9\uc2e0\uc5d0\uac8c \uc21c\uac04 \uc774\ub3d9\ud588\uc2b5\ub2c8\ub2e4.
 Party.Unlocked=[[\ud68c\uc0c9]] \ud30c\ud2f0\ub294 \uc7a0\uae08 \ud574\uc81c
 Commands.XPGain.Excavation=\ubcf4\ubb3c\uc744 \ubc1c\uad74\ud558\uace0 \ucc3e\ub294
@@ -66,9 +85,10 @@ Commands.XPGain.Mining=\uad11\uc5c5 \uc11d\uc7ac \ubc0f \uad11\uc11d
 Commands.XPGain.Swords=\uacf5\uaca9 \ubaac\uc2a4\ud130
 Commands.XPGain.Taming=\ub3d9\ubb3c \uae38\ub4e4\uc774\uae30, \ub610\ub294 \uc804\ud22c w / \uadc0\ud558\uc758 \ub291\ub300
 Commands.XPGain=[[\uc5b4\ub450\uc6b4 \ud68c\uc0c9]] XP \uac8c\uc778 : [[\ud770\uc0c9]] {0}
-XPRate.Event=[[\uae08]] mcMMO\ub294 XP \uc18d\ub3c4 \ud589\uc0ac\uc5d0 \ud604\uc7ac\uc785\ub2c8\ub2e4! XP \uc18d\ub3c4\ub294 {0} x\uc785\ub2c8\ub2e4!
+XPRate.Event=[[GOLD]]mcMMO \ub294 \ud604\uc7ac {0}\ubc30 \uacbd\ud5d8\uce58 \uc774\ubca4\ud2b8 \uc911\uc785\ub2c8\ub2e4! 
 Effects.Effects=\ud6a8\uacfc
 Guides.Excavation=[[\uc5b4\ub450\uc6b4 \uc544\ucfe0\uc544]] \ubc1c\uad74 \uc18c\uac1c :\n[[\ub178\ub780\uc0c9]] \ubc1c\uad74\uc774 \ubcf4\ubb3c\uc744 \ucc3e\uae30 \uc704\ud574 \ud759\uc744 \ud30c\uace0 \ud589\uc704\uc785\ub2c8\ub2e4.\n[[\ub178\ub780\uc0c9]] \ub2f9\uc2e0\uc774 \ubcf4\ubb3c\uc744 \ubc1c\uacac \ud560 \uac83\uc774\ub2e4 \ub545\uc744 \ubc1c\uad74\ud558\uc5ec.\n[[YELLOW]] \ub354 \ub2f9\uc2e0\uc774 \ub2f9\uc2e0\uc774 \ucc3e\uc744 \uc218\uc788\ub294 \ub354 \ub9ce\uc740 \ubcf4\ubb3c\uc744.\n\n[[\uc5b4\ub450\uc6b4 \uc544\ucfe0\uc544]] XP\uc758 \uac8c\uc778 :\n[[\ub178\ub780\uc0c9]] \ub2f9\uc2e0\uc774 \uc190\uc5d0 \uc0bd\uc73c\ub85c \ud30c \ub9cc\uc774\uc774 \uae30\uc220\uc5d0 XP\ub97c \uc5bb\uc744 \uc218 \uc788\uc2b5\ub2c8\ub2e4.\n[[\ub178\ub780\uc0c9]] \ub9cc \ud2b9\uc815 \ubb3c\uc9c8\uc774 \ubcf4\ubb3c\uacfc XP\uc5d0 \ud30c \ud560 \uc218 \uc788\uc2b5\ub2c8\ub2e4.\n[[\uc5b4\ub450\uc6b4 \uc544\ucfe0\uc544]] \ud638\ud658 \uac00\ub2a5 \uc790\ub8cc :\n[[\ub178\ub780\uc0c9]] \uc794\ub514, \ud759, \ubaa8\ub798, \uc810\ud1a0, \uc790\uac08, \uade0\uc0ac\uccb4, \uc601\ud63c\uc758 \ubaa8\ub798\n\n[[\uc5b4\ub450\uc6b4 \uc544\ucfe0\uc544]] \uc5b4\ub5bb\uac8c \uae30\uac00 \ud6c8\ub828 \ucc28\ub2e8\uae30\ub97c \uc0ac\uc6a9\ud558\ub824\uba74 \ub2e4\uc74c \ub2e8\uacc4\ub97c \ub530\ub974\uc2ed\uc2dc\uc624\n[[\ub178\ub780\uc0c9]] \uc190\uc5d0 \uc0bd\uc73c\ub85c \ubc14\ub85c \uc900\ube44\ud558\uc5ec \ub3c4\uad6c\ub97c \ud074\ub9ad\ud569\ub2c8\ub2e4.\n[[\ub178\ub780\uc0c9]] \uc77c\ub2e8\uc774 \uc0c1\ud0dc\uc5d0\uc11c \ub2f9\uc2e0\uc740 \ud560\uc5d0 \ub300\ud55c \uc0ac\ucd08\uc774\n\uc774 \uc758\uc9c0 [[\ub178\ub780\uc0c9]] \ubc1c\uad74\uacfc \uc811\ucd09 \ud638\ud658 \uc790\ub8cc\n[[\ub178\ub780\uc0c9]] \ud65c\uc131\ud654 \uae30\uac00 \ud6c8\ub828 \ucc28\ub2e8\uae30.\n[[\uc5b4\ub450\uc6b4 \uc544\ucfe0\uc544]] \uae30\uac00 \ud6c8\ub828 \ucc28\ub2e8\uae30\ub294 \ubb34\uc5c7\uc785\ub2c8\uae4c?\n[[\ub178\ub780\uc0c9]] \uae30\uac00 \ub4dc\ub9b4 \ube0c\ub808\uc774\ud06c\ub294 \uc7ac\uc0ac\uc6a9 \ub300\uae30 \uc2dc\uac04\uc774\uc788\ub294 \uae30\ub2a5\uc785\ub2c8\ub2e4\n[[\ub178\ub780\uc0c9]] \ubc1c\uad74 \uae30\uc220\uc5d0 \ubb36\uc5ec. \uc774 \ud2b8\ub9ac\ud50c \uae30\ud68c\ub97c\n[[\ub178\ub780\uc0c9]] \ubcf4\ubb3c\uc744 \ucc3e\ub294\uacfc \uc778\uc2a4\ud134\ud2b8 \ud734\uc2dd\uc744 \uac00\ub2a5\ud558\uac8c\n[[\ub178\ub780\uc0c9]] \ubc1c\uad74 \uc790\ub8cc\uc5d0.\n\n[[\uc5b4\ub450\uc6b4 \uc544\ucfe0\uc544]] \uc5b4\ub5bb\uac8c \ubcf4\ubb3c \uc0ac\ub0e5\uafbc \uc791\ub3d9\ud569\ub2c8\uae4c?\n[[\ub178\ub780\uc0c9]] \ubc1c\uad74\uc5d0 \ub300\ud55c \ubaa8\ub4e0 \uac00\ub2a5\ud55c \ubcf4\ubb3c \uc790\uccb4\uac00\n[[\ub178\ub780\uc0c9]] \uacb0\uacfc\ub85c \ub5a8\uc5b4\ud558\uae30\uc704\ud55c \uae30\uc220 \uc218\uc900 \uc694\uad6c, \uadf8\uac74\n[[\ub178\ub780\uc0c9]] \ub2f9\uc2e0\uc744 \ub3d5\ub294 \uc5bc\ub9c8\ub098 \ub9ce\uc740 \ub9d0\uc744 \uc5b4\ub835\ub2e4.\n[[\ub178\ub780\uc0c9]] \ub9c8\uc74c\uc744 \ub450\ub294 \uac83\uc774 \ub192\uc744 \ubc1c\uad74 \uae30\uc220\n[[\ub178\ub780\uc0c9]]\uc774\uba70, \ucc3e\uc744 \uc218\uc788\ub294 \ub354 \ub9ce\uc740 \ubcf4\ubb3c.\n[[\ub178\ub780\uc0c9]] \ub610\ud55c \uc5fc\ub450\uc5d0 \ub450\uc5b4\uc57c \uadf8 \ubc1c\uad74\uc758 \uac01 \uc720\ud615\n[[\ub178\ub780\uc0c9]] \ud638\ud658 \uc18c\uc7ac \ubcf4\ubb3c \uace0\uc720 \ubaa9\ub85d\uc774 \uc788\uc2b5\ub2c8\ub2e4.\n[[\ub178\ub780\uc0c9]] \uc989 \ub2f9\uc2e0\uc740 \uba3c\uc9c0\uc5d0 \ub2e4\ub978 \ubcf4\ubb3c\uc744 \ucc3e\uc744 \uc218 \uc788\uc2b5\ub2c8\ub2e4\n[[\ub178\ub780\uc0c9]] \ub2f9\uc2e0\uc740 \uc790\uac08\uc5d0\uc11c\uc640\ubcf4\ub2e4.\n[[\uc5b4\ub450\uc6b4 \uc544\ucfe0\uc544]] \ubc1c\uad74\uc5d0 \ub300\ud55c \ucc38\uace0 \uc0ac\ud56d :\n[[\ub178\ub780\uc0c9]] \ubc1c\uad74 \ubc29\uc6b8 \uc644\uc804\ud788 \uc0ac\uc6a9\uc790 \uc815\uc758 \uc544\ub974\n[[\ub178\ub780\uc0c9]] \uc9c0\uae08 \uacb0\uacfc\uac00 \uc11c\ubc84\uc5d0 \uc11c\ubc84\ub97c \ub2e4\ub97c \uc218 \uc788\uc2b5\ub2c8\ub2e4.
 Skills.Disarmed=[[DARK_RED]]\ud604\uc7ac \ubb34\uc7a5\ud574\uc81c \ub410\uc2b5\ub2c8\ub2e4!
 Stats.Header.Combat=[[\uae08]] - = \uc804\ud22c \uc2a4\ud0ac = -
-Stats.Header.Gathering=[[\uae08]] - = \uae30\uc220\uc744 \uc218\uc9d1 =-
+Stats.Header.Gathering=[[GOLD]]-=\uae30\uc220 \uc218\uc9d1=-
+Stats.Own.Stats=[[GREEN]][mcMMO] \uc0c1\ud0dc
