--- a/src/main/resources/locale/locale_nl.properties
+++ b/src/main/resources/locale/locale_nl.properties
@@ -72,13 +72,16 @@ Commands.AdminChat.Off=Alleen Admin gesprek[[RED]]Uit
 Commands.Disabled=[[RED]]Deze opdracht is gedeactiveerd.
 Commands.DoesNotExist=[[RED]]Speler bestaat niet in de database!
 Commands.Invite.Accepted=[[GREEN]]Uitnodiging geacepteerd. Jij hebt de groep  {0} betreden
+Commands.mcrank.Player=[[RED]]DOELWIT: [[WHITE]]{0}
 Commands.mmoedit=[player] <Kracht> <Nieuwe waarde> [[RED]] - Pas doel aan
 Commands.NoConsole=Deze commando wordt niet ondersteund vanuit de console.
+Commands.Party.ShareMode=[[DARK_GRAY]]DEEL MODUS:
 Commands.Party.Accept=[[RED]]- Accepteer groep uitnodiging
 Commands.Party.Chat.Off=Groep\'s Chat [[RED]]Uit
 Commands.Party.Chat.On=Groep\'s Chat [[GREEN]]Aan
 Commands.Party.Commands=[[GREEN]]--GROEP COMMANDOS--
 Commands.Party.Invite.0=[[RED]]ALERT: [[GREEN]]Jij hebt een groep uitnodiging ontvangen voor {0} van {1}
+Commands.Party.Create=[[GRAY]]Groep aangemaakt: {0}
 Commands.Party.Rename=[[GRAY]]Groep\'s naan veranderd naar: [[WHITE]]{0}
 Commands.Party.AlreadyExists=[[DARK_RED]]Groep {0} bestaat al!
 Commands.Party.Kick=[[RED]]Je bent verwijderd uit de groep {0}!
@@ -90,9 +93,10 @@ Commands.Party.Toggle=[[RED]]- Zet Party Chat aan/uit
 Commands.ptp.RequestExpired=[[RED]]Groep\'s teleport verzoek is verlopen!
 Commands.PowerLevel.Leaderboard=[[YELLOW]]--mcMMO[[BLUE]] Kracht Level [[YELLOW]]Leiderbord--
 Commands.PowerLevel=[[DARK_RED]]KRACHT LEVEL: [[GREEN]]{0}
-Commands.Usage.PartyName=groeps-naam
+Commands.Usage.Level=niveau
+Commands.Usage.Message=bericht
+Commands.Usage.Password=wachtwoord
 Party.Forbidden=[mcMMO] Groepen niet toegestaan op deze wereld (zie Machtigingen)
-Party.Help.6=[[RED]]Om een speler uit de groep te verwijderen, gebruik [[DARK_AQUA]]/party kick <player>
 Party.InvalidName=[[DARK_RED]]Dat is geen geldige groep\'s naam.
 Party.IsLocked=[[RED]]Deze groep is al gesloten!
 Party.IsntLocked=[[RED]]Deze groep is niet gesloten!
@@ -102,12 +106,16 @@ Party.NotOwner=[[DARK_RED]]Jij bent niet de groepsleider.
 Party.Owner.New=[[GREEN]]{0} is de nieuwe groep leider.
 Party.Owner.NotLeader=[[DARK_RED]]Jij bent niet meer de groepsleider.
 Party.Owner.Player=[[GREEN]]Jij bent nu de groep eigenaar.
+Party.Password.None=[[RED]]Deze groep is vergrendeld met een wachtwoord. Voer het wachtwoord in om in deze groep te komen.
 Party.Password.Incorrect=[[RED]]Groeps- wachtwoord is incorrect.
 Party.Password.Set=[[GREEN]]Groep wachtwoord veranderd in {0}
 Party.Player.InSameParty=[[RED]]{0} zit al in uw groep!
 Party.PlayerNotInParty=[[DARK_RED]]{0} zit niet in een groep
+Party.Specify=[[RED]]Je moet een groep invullen.
 Party.Teleport.Target=[[GREEN]]{0} is naar jou toe gedeporteerd.
 Party.Unlocked=[[GRAY]]Groep is ontgrendeld
+Party.ShareMode.Equal=GELIJK
+Party.ShareMode.Random=WILLEKEURIG
 Commands.XPGain.Axes=Monsters aanvallen
 Commands.XPGain.Excavation=Graven en schatten vinden
 Commands.XPGain.Fishing=Vissen (Wat denk je zelf?)
