Revert removing Chimaera wing.
We've decided to keep it, for now.

--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -470,6 +470,8 @@ Inspect.Offline=[[RED]]Du hast keine Rechte um ausgeloggte Spieler zu inspiziere
 Inspect.OfflineStats=mcMMO Werte f\u00fcr ausgeloggte Spieler [[YELLOW]]{0}
 Inspect.Stats=[[GREEN]]mcMMO Werte f\u00fcr [[YELLOW]]{0}
 Inspect.TooFar=[[RED]]Du bist zu weit entfernt um diesen Spieler zu inspizieren!
+Item.ChimaeraWing.Fail=**CHIMAERA FL\u00dcGEL Fehlgeschlagen!**
+Item.ChimaeraWing.Pass=**CHIMAERA FL\u00dcGEL**
 Item.Injured.Wait=[[WHITE]]Du wurdest k\u00fcrzlich verletzt und musst [[YELLOW]]({0}s) [[WHITE]]warten bis du dies wieder nutzen kannst.
 Skills.Disarmed=[[DARK_RED]]Du wurdest entwaffnet!
 Skills.Header=[[RED]]-----[][[GREEN]]{0}[[RED]][]-----
