--- a/src/main/resources/locale/locale_pl.properties
+++ b/src/main/resources/locale/locale_pl.properties
@@ -134,6 +134,8 @@ Guides.Smelting=Wkrotce...
 Inspect.OfflineStats=mcMMO Stats for Offline Player [[YELLOW]]{0}
 Inspect.Stats=[[GREEN]]mcMMO Stats for [[YELLOW]]{0}
 Inspect.TooFar=[[RED]]You are too far away to inspect that player!
+Item.ChimaeraWing.Fail=**CHIMAERA WING FAILED!**
+Item.ChimaeraWing.Pass=**SKRZYD\u0141O CHIMERY**
 Skills.Disarmed=[[DARK_RED]]Zostales rozbrojony!
 Skills.NeedMore=[[DARK_RED]]Potrzebujesz wiecej
 Skills.TooTired=[[RED]]Musisz odpoczac zanim ponownie uzyjesz tej umiejetnosci.
