--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -616,6 +616,8 @@ Inspect.Stats=[[GREEN]]mcMMO Stats for [[YELLOW]]{0}
 Inspect.TooFar=[[RED]]You are too far away to inspect that player!
 
 #ITEMS
+Item.ChimaeraWing.Fail=**CHIMAERA WING FAILED!**
+Item.ChimaeraWing.Pass=**CHIMAERA WING**
 Item.Injured.Wait=You were injured recently and must wait to use this. [[YELLOW]]({0}s)
 
 #SKILLS
