--- a/Changelog.txt
+++ b/Changelog.txt
@@ -34,6 +34,7 @@ Version 1.4.00-dev
  + Added Block Cracker to Unarmed's Berserk, turn smooth brick into cracked smooth brick
  + Added config option to disable automatic zip backups.
  = Fixed Green Thumb on wheat not working properly at rank 4
+ = Fixed Green Thumb and Green Terra consuming twice the amount of seed needed
  = Fixed Green Terra not also checking Green Thumb permissions
  = Fixed bug where splash potions could raise a player's unarmed level
  = Fixed bug where fired arrows could raise skill levels other than Archery
