--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -725,3 +725,7 @@ Commands.Description.skillreset=Reset mcMMO levels for a user
 Commands.Description.vampirism=Modify the mcMMO vampirism percentage or toggle vampirism mode on/off
 Commands.Description.xplock=Lock your mcMMO XP bar to a specific mcMMO skill
 Commands.Description.xprate=Modify the mcMMO XP rate or start an mcMMO XP event
+
+#UPDATE CHECKER
+UpdateChecker.outdated=You are using an outdated version of mcMMO!
+UpdateChecker.newavailable=There is a new version available on BukkitDev.
