Added '/mcnotify' command to toggle ability notifications on/off

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -34,6 +34,8 @@ Version 1.4.00-dev
  + Added '/hardcore' and '/vampirism' commands for toggling these modes on or off.
  + Added Block Cracker to Unarmed's Berserk, turn smooth brick into cracked smooth brick
  + Added config option to disable automatic zip backups.
+ + Added particle effects for many abilities.
+ + Added '/mcnotify' command to toggle ability notifications on/off
  = Fixed Green Thumb on wheat not working properly at rank 4
  = Fixed Green Thumb and Green Terra consuming twice the amount of seed needed
  = Fixed Green Terra not also checking Green Thumb permissions
