--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -435,6 +435,8 @@ Commands.mmoupdate.Start=[[GRAY]]Starting conversion...
 Commands.mmoupdate.Finish=[[GREEN]]Conversion finished!
 Commands.ModDescription=[[RED]]- Read brief mod description
 Commands.NoConsole=This command does not support console usage.
+Commands.Notifications.Off=Ability notifications toggled [[RED]]off
+Commands.Notifications.On=Ability notifications toggled [[GREEN]]on
 Commands.Offline=[[RED]]This command does not work for offline players.
 Commands.Other=[[GREEN]]--OTHER COMMANDS--
 Commands.Party.Header=[[RED]]-----[][[GREEN]]PARTY[[RED]][]-----
@@ -707,6 +709,7 @@ Commands.Description.mcability=Toggle mcMMO abilities being readied on right-cli
 Commands.Description.mcgod=Toggle mcMMO god-mode on/off
 Commands.Description.mchud=Change your mcMMO HUD style
 Commands.Description.mcmmo=Show a brief description of mcMMO
+Commands.Description.mcnotify=Toggle mcMMO abilities chat display notifications on/off
 Commands.Description.mcpurge=Purge users with no mcMMO levels and users who have not connected in over {0} months from the mcMMO database.
 Commands.Description.mcrank=Show mcMMO ranking for a player
 Commands.Description.mcrefresh=Refresh all cooldowns for mcMMO
