--- a/Changelog.txt
+++ b/Changelog.txt
@@ -36,6 +36,8 @@ Version 1.4.00-dev
  + Added config option to disable automatic zip backups.
  + Added particle effects for many abilities.
  + Added '/mcnotify' command to toggle ability notifications on/off
+ + Added ability for config files to automatically update with new keys, and prune out old ones
+ + Added config option to make .new config files instead over writing over old ones when updating
  = Fixed Green Thumb on wheat not working properly at rank 4
  = Fixed Green Thumb and Green Terra consuming twice the amount of seed needed
  = Fixed Green Terra not also checking Green Thumb permissions
