--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -288,11 +288,14 @@ Taming.Ability.Bonus.6=Sharpened Claws
 Taming.Ability.Bonus.7=+{0} Damage
 Taming.Ability.Bonus.8=Fast Food Service
 Taming.Ability.Bonus.9={0} Chance for heal on attack
+Taming.Ability.Bonus.10=Holy Hound
+Taming.Ability.Bonus.11=Regain health when damaged by magic or poison
 Taming.Ability.Locked.0=LOCKED UNTIL {0}+ SKILL (ENVIRONMENTALLY AWARE)
 Taming.Ability.Locked.1=LOCKED UNTIL {0}+ SKILL (THICK FUR)
 Taming.Ability.Locked.2=LOCKED UNTIL {0}+ SKILL (SHOCK PROOF)
 Taming.Ability.Locked.3=LOCKED UNTIL {0}+ SKILL (SHARPENED CLAWS)
 Taming.Ability.Locked.4=LOCKED UNTIL {0}+ SKILL (FAST FOOD SERVICE)
+Taming.Ability.Locked.5=LOCKED UNTIL {0}+ SKILL (HOLY HOUND)
 Taming.Combat.Chance.Gore=[[RED]]Gore Chance: [[YELLOW]]{0}
 Taming.Effect.0=Beast Lore
 Taming.Effect.1=Bone-whacking inspects wolves & ocelots
@@ -304,6 +307,8 @@ Taming.Effect.14=[[GRAY]]COTW (Ocelot): Crouch and left-click with {0} Fish in h
 Taming.Effect.15=[[GRAY]]COTW (Wolf): Crouch and left-click with {0} Bones in hand
 Taming.Effect.16=Fast Food Service
 Taming.Effect.17=Chance for wolves to heal on attack
+Taming.Effect.18=Holy Hound
+Taming.Effect.19=Healed by Magic & Poison
 Taming.Effect.2=Gore
 Taming.Effect.3=Critical Strike that applies Bleed
 Taming.Effect.4=Sharpened Claws
