Added "Shroom Thumb" ability to Herbalism. Closes #724

--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -131,6 +131,8 @@ Herbalism.Ability.GTh=[[GREEN]]**GREEN THUMB**
 Herbalism.Ability.HylianLuck=[[RED]]Hylian Luck Chance: [[YELLOW]]{0}
 Herbalism.Ability.Lower=[[GRAY]]**YOU LOWER YOUR HOE**
 Herbalism.Ability.Ready=[[GREEN]]**YOU READY YOUR HOE**
+Herbalism.Ability.ShroomThumb.Chance=[[RED]]Shroom Thumb Chance: [[YELLOW]]{0}
+Herbalism.Ability.ShroomThumb.Fail=[[RED]]**SHROOM THUMB FAIL**
 Herbalism.Effect.0=Green Terra (ABILITY)
 Herbalism.Effect.1=Spread the Terra, 3x Drops
 Herbalism.Effect.2=Green Thumb (Wheat)
@@ -143,6 +145,8 @@ Herbalism.Effect.8=Double Drops (All Herbs)
 Herbalism.Effect.9=Double the normal loot
 Herbalism.Effect.10=Hylian Luck
 Herbalism.Effect.11=Gives a small chance of finding rare items
+Herbalism.Effect.12=Shroom Thumb
+Herbalism.Effect.13=Spread mycelium to dirt & grass
 Herbalism.HylianLuck=[[GREEN]]The luck of Hyrule is with you today!
 Herbalism.Listener=Herbalism: 
 Herbalism.SkillName=HERBALISM
