--- a/Changelog.txt
+++ b/Changelog.txt
@@ -40,6 +40,7 @@ Version 1.4.00-dev
  + Added config option to make .new config files instead over writing over old ones when updating
  + Added "Holy Hound" ability to Taming
  + Added "Shroom Thumb" ability to Herbalism
+ + Added child.yml config file to choose parents for child skills
  = Fixed Green Thumb on wheat not working properly at rank 4
  = Fixed Green Thumb and Green Terra consuming twice the amount of seed needed
  = Fixed Green Terra not also checking Green Thumb permissions
